--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 ul {
@@ -8,16 +9,21 @@ ul {
 }
 
 :root {
+    --background-color: rgb(230,232,240);
+    --header-color: rgb(250, 250, 255);
     --base-color: rgb(38, 154, 207);
     --accent-color: rgb(240, 171, 24);
+    font-size: 18px;
 }
 
 body, html {
   height: 100%;
 }
 
+
+/* GLOBAL LAYOUT */
 .layout {
-    background-color: rgb(230,232,240);
+    background-color: var(--background-color);
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -25,13 +31,14 @@ body, html {
 }
 
 .layout > div {
-    padding: 30px 50px;
-    font-size: 20px;
+    padding: 1rem 2rem;
 }
 
+
+/* HEADER */
 .header {
     grid-column: 2 / 3;
-    background-color: rgb(250, 250, 255);
+    background-color: var(--header-color);
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 2fr;
@@ -51,12 +58,85 @@ body, html {
 
 .content-button {
     border: none;
+    border-radius: 4rem;
     background-color: var(--base-color);
+    padding: 15px 60px;
+    font-size: 1rem;
+    color: var(--header-color);
+    cursor: pointer;
 }
 
-
+/* SIDEBAR */
 .sidebar {
     grid-row: 1 / 3;
     background-color: var(--base-color);
+    display: grid;
+    grid-template-rows: 40px 40px repeat(6,30px) 40px repeat(3, 30px);
+    color: var(--background-color);
+}
+
+.sidebar > .title {
+    font-size: 2rem;
+}
+
+/* MAIN AREA */
+.main {
+    display: grid;
+    grid-template: 1fr 1fr / 2fr 1fr;
+    gap: 1rem;
+    grid-template-areas:
+        "projects announcements"
+        "projects trending"
+}
+
+/* projects */
+.main > .projects {
+    grid-area: projects;
+    align-self: stretch;
+}
+
+.projects-container {
+    display: grid;
+    grid-template: auto 1fr 1fr / repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1rem;
+}
+
+.project-card {
+    height: 250px;
+    background-color: var(--header-color);
+    border-left: 8px solid var(--accent-color);
+    border-radius: 8px;
+    padding: 1rem;
+}
+
+/* announcements */
+.main > .announcements {
+    grid-area: announcements;
+}
+
+.announcements-container {
+    background-color: var(--header-color);
+    border-radius: 8px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding: 1.5rem;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.announcements-container > * {
+    flex-grow: 1;
+}
+
+.announcements-container hr {
+    margin: 30px 50px;
+    color: gray;
+}
+
+/* trending */
+.main > .trending {
+    grid-area: trending;
 }
 
