--- a/css/styles.css
+++ b/css/styles.css
@@ -99,13 +99,23 @@ body, html {
     grid-row: 1 / 3;
     background-color: var(--base-color);
     display: grid;
-    grid-template-rows: 40px 40px repeat(6,30px) 40px repeat(3, 30px);
+    grid-template-rows: 50px 40px repeat(6,50px) 40px repeat(3, 50px);
     color: var(--background-color);
 }
 
-.sidebar > .title {
-    font-size: 2rem;
+.sidebar a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 1.5rem;
+    font-weight: bold;
+    
 }
+
+.sidebar .title {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 
 /* MAIN AREA */
 .main {
