--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@
   box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+}
+
 ul {
     list-style: none;
 }
@@ -47,8 +51,8 @@ input, button, textarea, select {
 }
 
 .avatar {
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
 }
 
 .avatar-large {
@@ -178,23 +182,31 @@ body, html {
     padding: 1rem;
 }
 
+.project-card h3 {
+    margin-bottom: 10px;
+}
+
+.project-card a {
+    color: black;
+}
+
+.project-card a:visited {
+    color: var(--base-color);
+}
+
 /* announcements */
 .main > .announcements {
     grid-area: announcements;
 }
 
 .announcements-container {
-    height: 90%;
+    height: 85%;
     background-color: var(--header-color);
     border-radius: 8px;
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-}
-
-.announcements-container > div {
-    flex-grow: 1;
 }
 
 .announcements-container hr {
@@ -210,8 +222,12 @@ body, html {
 .trending-container {
     background-color: var(--header-color);
     border-radius: 8px;
-    display: flex;
-    flex-direction: column;
     padding: 1.5rem;
+    display: grid;
+    grid-template: repeat(4, 80px) / 100px 1fr;
+    align-items: center;
 }
 
+.trending-user p {
+    color: rgb(100, 100, 100);
+}
